# sentinelflow

./: .env  .env.example  .gitignore  .txt  EVAL_REPORT.md  Makefile  README.md  SentinelFlow_Academic_Presentation.pptx  alembic.ini  eval_report_heuristic.json  eval_report_llm.json  pyproject.toml  sentinelflow.db  test_sentinelflow.db  ~$SentinelFlow_Academic_Presentation.pptx
alembic/: env.py
alembic/versions/: 1434a238b39b_add_session_memory.py  fb9af3afa081_init_schema.py
app/: main.py
app/agent/: -- SQLite.sql  llm_planner.py  memory.py  memory_store.py  orchestrator.py  planner.py  policy.py  resolver.py  types.py
app/api/: routes_admin.py  routes_admin_planner.py  routes_audit.py  routes_chat.py  routes_frontend.py  routes_logs.py  routes_observability.py  routes_products.py  routes_sessions.py  routes_traces.py  routes_ui_audit.py  routes_ui_timeline.py  routes_ui_users.py  routes_users.py
app/core/: config.py  logging.py
app/db/: deps.py  models.py  seed.py  session.py
app/schemas/: api.py  chat.py  events.py  observability.py  tool_io.py
app/services/: accounts.py  inventory.py  payments.py
app/tools/: balance.py  products.py  purchase.py  records.py  registry.py
app/utils/: ids.py
eval/: dataset.jsonl  make_report.py  run_eval.py
sentinelflow-ui/: package-lock.json  package.json
sentinelflow-ui/app/: globals.css  layout.tsx  page.tsx
sentinelflow-ui/components/: ChatConsole.tsx  ObservabilityConsole.tsx
tests/: conftest.py  test_admin_seed.py  test_chat_api.py  test_idempotency.py  test_planner_fallback.py  test_policy.py
(+3 files in other folders)
