[tool.poetry]
name = "sentinelflow"
version = "0.1.0"
description = "SentinelFlow: A safe agent-based NLP system for task-oriented tool execution"
authors = ["Ian Madhara <imadhara@mail.yu.edu>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.0"
black = "^24.8.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
